fix hero image alignment bug, better accordion scrolling.

--- a/styles/components.accordion.css
+++ b/styles/components.accordion.css
@@ -12,15 +12,15 @@
   }
 
   .ifu-accordion__item.ifu-accordion--enter-active {
-    @apply opacity-100 transition-opacity duration-200 max-h-full ease-in;
+    @apply opacity-100 transition-opacity duration-300 max-h-full ease-in;
   }
   .ifu-accordion__item.ifu-accordion--enter-done {
     @apply opacity-100 max-h-full;
   }
-  .ifu-accordion__item.ifu-accordion--exit {
+  /* .ifu-accordion__item.ifu-accordion--exit {
     @apply opacity-100 max-h-full;
   }
   .ifu-accordion__item.ifu-accordion--exit-active {
     @apply opacity-0 transition-opacity duration-100 max-h-full ease-in;
-  }
+  } */
 }
